# pyspark_course_excercises

hw1/: .gitignore  Dockerfile  README.md  docker-compose.yml
hw1/notebooks/: Video Scoring.ipynb
hw2/: .gitignore  README.md  pyproject.toml
hw2/data_quality/: test_dq.py  videos_checks.yml
